k8s/appsrv.yaml
# Quarkus Application Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appsrv

spec:
  replicas: 1
  selector:
    matchLabels:
      component: appsrv
  template:
    metadata:
      labels:
        component: appsrv
    spec:
      containers:
        - name: appsrv
          #image: ghcr.io/clander/backend4:latest
          image: ghcr.io/netzermi/backend:latest
          # remove this when stable. Currently we do not take care of version numbers
          imagePullPolicy: Always
          ports:
            - containerPort: 80
